@@ -24,6 +24,7 @@ import com.google.cloud.hadoop.gcsio.GoogleCloudStorageFileSystemOptions;
 import com.google.cloud.hadoop.gcsio.GoogleCloudStorageOptions;
 import com.google.cloud.hadoop.gcsio.MethodOutcome;
 import com.google.cloud.hadoop.gcsio.testing.InMemoryGoogleCloudStorage;
+import com.google.cloud.hadoop.testing.TestingAccessTokenProvider;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.URI;
@@ -323,6 +324,20 @@ public class GoogleHadoopFileSystemIntegrationTest
             IllegalStateException.class,
             () -> new GoogleHadoopFileSystem().initialize(gsUri, config));
     assertThat(thrown).hasMessageThat().contains("No valid credential configuration discovered");
+  }
+
+  @Test
+  @Override
+  public void testInvalidCredentialFromAccessTokenProvider()
+      throws URISyntaxException, IOException {
+    Configuration config = loadConfig();
+    config.set("fs.gs.auth.access.token.provider.impl", TestingAccessTokenProvider.class.getName());
+    URI gsUri = new URI("gs://foobar/");
+
+    IOException thrown =
+        assertThrows(
+            IOException.class, () -> new GoogleHadoopFileSystem().initialize(gsUri, config));
+    assertThat(thrown).hasCauseThat().hasMessageThat().contains("Invalid Credentials");
   }
 
   /**
