@@ -125,6 +125,9 @@ public abstract class GoogleHadoopFileSystemTestBase extends HadoopFileSystemTes
   public abstract void testConfigureBucketsSuccess()
       throws URISyntaxException, IOException;
 
+  @Test
+  public abstract void testInvalidCredentialFromAccessTokenProvider()
+      throws URISyntaxException, IOException;
   // -----------------------------------------------------------------------------------------
   // Tests that aren't supported by all configurations of GHFS.
   // -----------------------------------------------------------------------------------------
